[package]
name = "commitlog"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6" }
worker-macros = { version = "0.6" }
console_error_panic_hook = { version = "0.1.7" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
askama = "0.12"
